se agrega búsqueda por nombre

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=redis-stresss-test
 server.port=8080
 
-spring.redis.host=192.168.1.21
-spring.redis.port=6389
+spring.redis.host=ocalzada-storage.redis.cache.windows.net
+spring.redis.password=lI0mRK2uVM86t0gG0I7eXwTDBiiPcpXrWAzCaHvUjZE=
+spring.redis.port=6380
+spring.redis.ssl=true
